<?xml version="1.0"?>
<package format="2">
    <name>mpc_local_planner</name>
    <version>0.0.0</version>
    <description>The mpc_local_planner package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="suraj@todo.todo">suraj</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>mpc_lib</depend>

    <depend>virat_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nav_core plugin="${prefix}/nav_plugin.xml"/>
    </export>
</package>
